--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       
       </div>
       <div class="card">
-        <a href="Amazon/amaz.html">
+        <a href="amaz.html">
         <div class="ubers">
          <img src="yender-gonzalez-lX5OfZFjHWk-unsplash.jpg" alt="" class="uber">
         </div>
