--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@ div.mains{
 
     </div>
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
       var story = document.querySelector('.story');
       var opt2 = document.querySelector('.opt2')
@@ -278,6 +279,21 @@ div.mains{
           behavior: "smooth"
         })
       })
+    gsap.from(".anim",{
+        x:200,
+        delay:2,
+        duration:0.9,
+        stagger:1,
+        yoyo:true,
+        color:"transparent"
+    })
+    gsap.from(".anim2",{
+        y:-100,
+        duration:0.9,
+        stagger:1,
+        delay:1,
+        color:"transparent"
+    })
   </script>
 </body>
 </html>
